Lab 3 bonus, Lab 4 and Lab 5 concluded

--- a/LABS/M01-L03-list_comprehension.ipynb
+++ b/LABS/M01-L03-list_comprehension.ipynb
@@ -603,15 +603,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "RZt-FwneZMTn"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Open', 'Open', 'Senior', 'Open', 'Open', 'Senior']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "\n"
+    "data = [[18, 20],[45, 2],[61, 12],[37, 6],[21, 21],[78, 9]]\n",
+    "membership = []\n",
+    "def open_senior(data):\n",
+    "    for item in data:\n",
+    "        if item[0] >= 55 and item[1] >7:\n",
+    "            membership.append(\"Senior\")\n",
+    "        else:\n",
+    "            membership.append(\"Open\")\n",
+    "            \n",
+    "    return membership\n",
+    "        \n",
+    "open_senior(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
