--- a/LABS/M01-L04-functional_programming.ipynb
+++ b/LABS/M01-L04-functional_programming.ipynb
@@ -486,41 +486,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here\n",
-    "def recursive_age():\n",
-    "    age = input(\"age: \")\n",
-    "    while int(age) > 150:\n",
-    "        age = input(\"age:\")\n",
-    "    #while age > 0 and age < 150:\n",
-    "    #    input(\"Type your age: \")\n",
-    "       \n",
-    " \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "age: 150\n",
-      "age:150\n",
-      "age:151\n",
+      "age: 170\n",
       "age:170\n",
-      "age:0\n"
+      "age:160\n",
+      "age:159\n",
+      "age:150\n"
      ]
     }
    ],
    "source": [
-    "recursive_age()"
+    "# Your code here\n",
+    "def recursive_age():\n",
+    "    age = input(\"age: \")\n",
+    "    while int(age) > 150: #int(age) porque o input vem como string\n",
+    "        age = input(\"age:\")\n",
+    "    #while age > 0 and age < 150:\n",
+    "    #    input(\"Type your age: \")\n",
+    "recursive_age()      \n",
+    " \n",
+    "    "
    ]
   },
   {
@@ -553,13 +544,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AI Big Data Data Learning Machine Pipeline Warehouse'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "def alphabetical_order_local():\n",
-    "    loca_variable =  \"Big Data, Machine Learning, AI, Data Warehouse, Pipeline\"\n"
+    "    local_variable =  \"Big Data, Machine Learning, AI, Data Warehouse, Pipeline\"\n",
+    "    local_variable = local_variable.replace(\",\",\"\").split()\n",
+    "    local_variable.sort()\n",
+    "    local_variable = \" \".join(local_variable)\n",
+    "    \n",
+    "    return local_variable\n",
+    "\n",
+    "alphabetical_order_local()\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -580,12 +591,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'global_variable' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [26]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(global_variable)\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m global_variable\n\u001b[1;32m----> 9\u001b[0m \u001b[43malphabetical_order_global\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [26]\u001b[0m, in \u001b[0;36malphabetical_order_global\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21malphabetical_order_global\u001b[39m():\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mglobal\u001b[39;00m globar_variable\n\u001b[1;32m----> 4\u001b[0m     global_variable \u001b[38;5;241m=\u001b[39m \u001b[43mglobal_variable\u001b[49m\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39msplit()\n\u001b[0;32m      5\u001b[0m     global_variable\u001b[38;5;241m.\u001b[39msort()\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(global_variable)\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'global_variable' referenced before assignment"
+     ]
+    }
+   ],
    "source": [
     "global_variable = \"Big Data, Machine Learning, AI, Data Warehouse, Pipeline\"\n",
-    "def alphabetical_order_global():"
+    "\n",
+    "def alphabetical_order_global():\n",
+    "    global globar_variable\n",
+    "    global_variable = global_variable.replace(\",\",\"\").split()\n",
+    "    global_variable.sort()\n",
+    "    \" \".join(global_variable)\n",
+    "    return global_variable\n",
+    "\n",
+    "alphabetical_order_global()\n",
+    "    "
    ]
   }
  ],
