--- a/LABS/M01-L05-error_handling.ipynb
+++ b/LABS/M01-L05-error_handling.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -60,13 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "z_2AsNicd-Xd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sqrt_for_all(x):\n",
     "    \"\"\"\n",
@@ -82,6 +93,9 @@
     "\n",
     "    # Your code here\n",
     "    \n",
+    "    if x < 0:\n",
+    "        x = x * -1\n",
+    "    \n",
     "    return math.sqrt(x)\n",
     "\n",
     "sqrt_for_all(-1)"
@@ -96,13 +110,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "_knyIShRd-Xn"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def divide(x, y):\n",
     "    \"\"\"\n",
@@ -118,8 +143,10 @@
     "    \"\"\"\n",
     "    \n",
     "    # Your code here\n",
-    "\n",
-    "    return x / y\n",
+    "    if y == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return x / y\n",
     "\n",
     "divide(5, 0)"
    ]
@@ -139,13 +166,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "4tM0eakyd-Xy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 10, 9]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def add_elements(a, l):\n",
     "    \"\"\"\n",
@@ -162,10 +200,16 @@
     "    \"\"\"\n",
     "    \n",
     "    # Your code here\n",
-    "\n",
-    "    return [a + element for element in l]\n",
-    "        \n",
-    "add_elements(5, 6)"
+    "    \n",
+    "    if isinstance(a,int)and isinstance(l,int):\n",
+    "        return a+l\n",
+    "    elif isinstance(a,int) and isinstance(l,list):\n",
+    "        return [a + element for element in l]\n",
+    "    elif isinstance(a, list) and isinstance(l, int):\n",
+    "        return [l + element for element in a]\n",
+    "    else:\n",
+    "        return \"Operation not supported\"\n",
+    "add_elements([6,5,4], 5)"
    ]
   },
   {
@@ -189,17 +233,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "HlHlN4Jgd-X6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "l = [1,2,3,4]\n",
     "\n",
-    "sum([element + 1 for element in l]"
+    "\n",
+    "sum([element + 1 for element in l])"
    ]
   },
   {
@@ -211,18 +267,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "5TFPhs9vd-X_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current element in the loop is 1\n",
+      "The current element in the loop is 2\n",
+      "The current element in the loop is 3\n",
+      "The current element in the loop is 4\n"
+     ]
+    }
+   ],
    "source": [
     "l = [1,2,3,4]\n",
     "\n",
     "for element in l:\n",
-    "    print(\"The current element in the loop is\" + element)"
+    "    print(f\"The current element in the loop is {element}\")"
    ]
   },
   {
@@ -248,16 +315,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "rDAkM9a_d-YH"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List index out of range\n"
+     ]
+    }
+   ],
    "source": [
     "abc=[10,20,20]\n",
-    "print(abc[3])"
+    "try:\n",
+    "    print(abc[3])\n",
+    "except IndexError:\n",
+    "    print(\"List index out of range\")\n"
    ]
   },
   {
@@ -269,18 +347,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "7k6mh45gd-YO"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can't divide by zero\n"
+     ]
+    }
+   ],
    "source": [
     "x = 5\n",
     "y = 0\n",
-    "\n",
-    "z = x/y"
+    "try:\n",
+    "    z = x/y\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Can't divide by zero\")"
    ]
   },
   {
@@ -292,16 +380,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "a13OgyE1d-YV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operation not supported by iterable\n",
+      "Operation not supported by iterable\n",
+      "Operation not supported by iterable\n"
+     ]
+    }
+   ],
    "source": [
     "for i in ['a','b','c']:\n",
-    "    print (i**2)"
+    "    try:\n",
+    "        print (i**2)\n",
+    "    except TypeError:\n",
+    "        print(\"Operation not supported by iterable.\")"
    ]
   },
   {
@@ -313,15 +414,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "esJnxjj1d-YZ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable not defined\n"
+     ]
+    }
+   ],
    "source": [
-    "print(some_string)"
+    "try:\n",
+    "    print(some_string)\n",
+    "except NameError:\n",
+    "    print(\"Variable not defined\")"
    ]
   },
   {
@@ -338,13 +450,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "T1ngCG6Ad-Ye"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.2188758248682006"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def log_square(x):\n",
     "    \"\"\"\n",
@@ -359,20 +482,45 @@
     "    Sample Input: 5\n",
     "    Sample Output: 3.21887\n",
     "    \"\"\"\n",
+    " \n",
+    "    # Your code here:\n",
+    "    try:\n",
+    "        math.log(x)\n",
     "    \n",
-    "    # Your code here:"
+    "    except ValueError:\n",
+    "        print(\"Number can't be zero\")\n",
+    "        if x == 0:\n",
+    "            raise ValueError(\"Number is equal to zero\")\n",
+    "       \n",
+    "    finally:\n",
+    "        x = math.log(x**2)\n",
+    "      \n",
+    "        return x\n",
+    "log_square(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "sombPY4md-Yj"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import re\n",
     "def check_capital(x):\n",
     "    \"\"\"\n",
     "    This function returns true if the string contains \n",
@@ -384,9 +532,23 @@
     "    Sample Input: 'John'\n",
     "    Sample Output: True\n",
     "    \"\"\"\n",
+    "    # Your code here:\n",
     "    \n",
-    "    # Your code here:"
+    "    if re.findall(\"[A-Z]\", x):\n",
+    "        return True\n",
+    "    else:\n",
+    "        raise ValueError(\"Does not contain at least one capital\")\n",
+    "        \n",
+    "check_capital('John')\n",
+    "                "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
