--- a/MATERIAL AULA JUPYTER NB/asset-v1_IRONHACK+DAFT+202103_SAO+type@asset+block@data-manipulation-filtersoct.ipynb
+++ b/MATERIAL AULA JUPYTER NB/asset-v1_IRONHACK+DAFT+202103_SAO+type@asset+block@data-manipulation-filtersoct.ipynb
@@ -11663,11 +11663,112 @@
     "numero_cilindros = 4\n",
     "data.query(f'Make == \"Acura\" and Cylinders == {numero_cilindros}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-19T14:27:17.436514Z",
+     "start_time": "2022-01-19T14:27:17.418563Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "table_1 = np.random.choice([0,25,50,75,100],size=(3,5))\n",
+    "table_2 = np.random.choice(['   '],size=(3,5))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-19T14:31:17.389587Z",
+     "start_time": "2022-01-19T14:31:17.380613Z"
+    },
+    "cell_style": "split"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 50  50  25 100  25]\n",
+      " [ 75  50   0   0  50]\n",
+      " [ 50  75  75  25 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(table_1)\n",
+    "table_2[table_1 == 100] = \"max\"\n",
+    "table_2[table_1 == 0] = \"min\"\n",
+    "table_2[(table_1 != 100) & (table_1 != 0)] = \"med\"\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-19T14:30:25.542929Z",
+     "start_time": "2022-01-19T14:30:25.522983Z"
+    },
+    "cell_style": "split"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['med', 'med', 'med', 'max', 'med'],\n",
+       "       ['med', 'med', 'min', 'min', 'med'],\n",
+       "       ['med', 'med', 'med', 'med', 'max']], dtype='<U3')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-19T14:42:07.792174Z",
+     "start_time": "2022-01-19T14:42:07.775219Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['Media', 'Media', 'Media', 'Max', 'Media'],\n",
+       "       ['Media', 'Media', 'Min', 'Min', 'Media'],\n",
+       "       ['Media', 'Media', 'Media', 'Media', 'Max']], dtype='<U5')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(table_1<25, 'Min',np.where(table_1>75,'Max','Media'))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -11681,7 +11782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.1"
   },
   "toc": {
    "base_numbering": 1,
