--- a/MATERIAL AULA JUPYTER NB/asset-v1_IRONHACK+DAFT+202103_SAO+type@asset+block@dataframe-calculation.ipynb
+++ b/MATERIAL AULA JUPYTER NB/asset-v1_IRONHACK+DAFT+202103_SAO+type@asset+block@dataframe-calculation.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-02T12:55:41.439163Z",
-     "start_time": "2021-04-02T12:55:40.581515Z"
+     "end_time": "2022-01-21T12:24:02.752937Z",
+     "start_time": "2022-01-21T12:24:01.538923Z"
     }
    },
    "outputs": [],
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-02T12:55:42.441617Z",
-     "start_time": "2021-04-02T12:55:41.441158Z"
+     "end_time": "2022-01-21T12:28:35.090446Z",
+     "start_time": "2022-01-21T12:28:34.183917Z"
     }
    },
    "outputs": [],
@@ -4306,11 +4306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-02T12:55:43.979584Z",
-     "start_time": "2021-04-02T12:55:43.305425Z"
+     "end_time": "2022-01-21T12:24:44.580336Z",
+     "start_time": "2022-01-21T12:24:40.669831Z"
     }
    },
    "outputs": [],
@@ -5534,7 +5534,8 @@
     "ExecuteTime": {
      "end_time": "2021-04-02T12:56:16.610181Z",
      "start_time": "2021-04-02T12:56:16.458071Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -5564,6 +5565,280 @@
     "sns.scatterplot(x=animals['brainwt'],y=animals['bodywt'])\n",
     "plt.xlim((0,800))\n",
     "plt.ylim((0,600))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-21T12:50:14.818065Z",
+     "start_time": "2022-01-21T12:50:14.779168Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Species</th>\n",
+       "      <th>BodyWt</th>\n",
+       "      <th>BrainWt</th>\n",
+       "      <th>NonDreaming</th>\n",
+       "      <th>Dreaming</th>\n",
+       "      <th>TotalSleep</th>\n",
+       "      <th>LifeSpan</th>\n",
+       "      <th>Gestation</th>\n",
+       "      <th>Predation</th>\n",
+       "      <th>Exposure</th>\n",
+       "      <th>Danger</th>\n",
+       "      <th>wtcat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Africanelephant</td>\n",
+       "      <td>6654.000</td>\n",
+       "      <td>5712.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>38.6</td>\n",
+       "      <td>645.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>SUPER OVERWEIGHT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Africangiantpouchedrat</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NORMAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ArcticFox</td>\n",
+       "      <td>3.385</td>\n",
+       "      <td>44.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NORMAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arcticgroundsquirrel</td>\n",
+       "      <td>0.920</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NORMAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Asianelephant</td>\n",
+       "      <td>2547.000</td>\n",
+       "      <td>4603.0</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>624.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>SUPER OVERWEIGHT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>Treehyrax</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NORMAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>Treeshrew</td>\n",
+       "      <td>0.104</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>13.2</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NORMAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>Vervet</td>\n",
+       "      <td>4.190</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NORMAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Wateropossum</td>\n",
+       "      <td>3.500</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>12.8</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NORMAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>Yellow-belliedmarmot</td>\n",
+       "      <td>4.050</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NORMAL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>62 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Species    BodyWt  BrainWt  NonDreaming  Dreaming  \\\n",
+       "0          Africanelephant  6654.000   5712.0          NaN       NaN   \n",
+       "1   Africangiantpouchedrat     1.000      6.6          6.3       2.0   \n",
+       "2                ArcticFox     3.385     44.5          NaN       NaN   \n",
+       "3     Arcticgroundsquirrel     0.920      5.7          NaN       NaN   \n",
+       "4            Asianelephant  2547.000   4603.0          2.1       1.8   \n",
+       "..                     ...       ...      ...          ...       ...   \n",
+       "57               Treehyrax     2.000     12.3          4.9       0.5   \n",
+       "58               Treeshrew     0.104      2.5         13.2       2.6   \n",
+       "59                  Vervet     4.190     58.0          9.7       0.6   \n",
+       "60            Wateropossum     3.500      3.9         12.8       6.6   \n",
+       "61    Yellow-belliedmarmot     4.050     17.0          NaN       NaN   \n",
+       "\n",
+       "    TotalSleep  LifeSpan  Gestation  Predation  Exposure  Danger  \\\n",
+       "0          3.3      38.6      645.0          3         5       3   \n",
+       "1          8.3       4.5       42.0          3         1       3   \n",
+       "2         12.5      14.0       60.0          1         1       1   \n",
+       "3         16.5       NaN       25.0          5         2       3   \n",
+       "4          3.9      69.0      624.0          3         5       4   \n",
+       "..         ...       ...        ...        ...       ...     ...   \n",
+       "57         5.4       7.5      200.0          3         1       3   \n",
+       "58        15.8       2.3       46.0          3         2       2   \n",
+       "59        10.3      24.0      210.0          4         3       4   \n",
+       "60        19.4       3.0       14.0          2         1       1   \n",
+       "61         NaN      13.0       38.0          3         1       1   \n",
+       "\n",
+       "               wtcat  \n",
+       "0   SUPER OVERWEIGHT  \n",
+       "1             NORMAL  \n",
+       "2             NORMAL  \n",
+       "3             NORMAL  \n",
+       "4   SUPER OVERWEIGHT  \n",
+       "..               ...  \n",
+       "57            NORMAL  \n",
+       "58            NORMAL  \n",
+       "59            NORMAL  \n",
+       "60            NORMAL  \n",
+       "61            NORMAL  \n",
+       "\n",
+       "[62 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (animals['BodyWt'] > animals['BodyWt'].quantile(q=[0.1]) #= \"ALMOST SUPER OVERWEIGHT\"\n",
+    "# (animals['BodyWt'] > animals['BodyWt'].quantile(q=[0.85]) #= \"SUPER OVERWEIGHT\"\n",
+    "# (animals['BodyWt'] < animals['BodyWt'].quantile(q=[0.95]) #= \"SUPER SKINNY\"\n",
+    "# animals\n",
+    "#MASCARA N FUNCIONA COM IF\n",
+    "animals[\"wtcat\"] = pd.qcut(animals[\"BodyWt\"], q=[0,0.1,0.85,0.95,1], labels = [\"SUPER SKINNY\",\"NORMAL\", \"ALMOST SUPER OVERWEIGHT\", \"SUPER OVERWEIGHT\"])\n",
+    "animals"
    ]
   },
   {
@@ -5598,7 +5873,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5612,7 +5887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.1"
   },
   "toc": {
    "base_numbering": 1,
