--- a/MATERIAL AULA JUPYTER NB/asset-v1_IRONHACK+DAFT+202010_SAO+type@asset+block@map-reduce-filter.ipynb
+++ b/MATERIAL AULA JUPYTER NB/asset-v1_IRONHACK+DAFT+202010_SAO+type@asset+block@map-reduce-filter.ipynb
@@ -1113,7 +1113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1127,7 +1127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.1"
   },
   "toc": {
    "base_numbering": 1,
