--- a/MATERIAL AULA JUPYTER NB/asset-v1_IRONHACK+DAFT+202201_3_SAO+type@asset+block@functions-class.ipynb
+++ b/MATERIAL AULA JUPYTER NB/asset-v1_IRONHACK+DAFT+202201_3_SAO+type@asset+block@functions-class.ipynb
@@ -9,10 +9,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-20T17:28:55.767971Z",
+     "start_time": "2022-01-20T17:28:53.144587Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting seaborn\n",
+      "  Downloading seaborn-0.11.2-py3-none-any.whl (292 kB)\n",
+      "Requirement already satisfied: matplotlib>=2.2 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from seaborn) (3.5.1)\n",
+      "Requirement already satisfied: pandas>=0.23 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from seaborn) (1.3.5)\n",
+      "Requirement already satisfied: numpy>=1.15 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from seaborn) (1.22.1)\n",
+      "Requirement already satisfied: scipy>=1.0 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from seaborn) (1.7.3)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (4.28.5)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (1.3.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (3.0.6)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (9.0.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (0.11.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (21.3)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from pandas>=0.23->seaborn) (2021.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\rfbj\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from python-dateutil>=2.7->matplotlib>=2.2->seaborn) (1.16.0)\n",
+      "Installing collected packages: seaborn\n",
+      "Successfully installed seaborn-0.11.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install seaborn\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -2953,7 +2984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
   },
   "toc": {
    "base_numbering": 1,
