--- a/PROJECTS/Data Cleaning - Shark Attack/Data Cleaning - Shark Attack.ipynb
+++ b/PROJECTS/Data Cleaning - Shark Attack/Data Cleaning - Shark Attack.ipynb
@@ -102,11 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                 New Moon        First Quarter            Full Moon  \\\n0                    None  1800-01-02T00:00:00  1800-01-10T00:00:00   \n1     1800-01-25T00:00:00  1800-02-01T00:00:00  1800-02-09T00:00:00   \n2     1800-02-23T00:00:00  1800-03-03T00:00:00  1800-03-11T00:00:00   \n3     1800-03-25T00:00:00  1800-04-02T00:00:00  1800-04-09T00:00:00   \n4     1800-04-23T00:00:00  1800-05-02T00:00:00  1800-05-08T00:00:00   \n...                   ...                  ...                  ...   \n2923  2022-08-27T00:00:00  2022-09-03T00:00:00  2022-09-10T00:00:00   \n2924  2022-09-25T00:00:00  2022-10-02T00:00:00  2022-10-09T00:00:00   \n2925  2022-10-25T00:00:00  2022-11-01T00:00:00  2022-11-08T00:00:00   \n2926  2022-11-23T00:00:00  2022-11-30T00:00:00  2022-12-08T00:00:00   \n2927  2022-12-23T00:00:00  2022-12-29T00:00:00                 None   \n\n            Third Quarter  \n0     1800-01-18T00:00:00  \n1     1800-02-16T00:00:00  \n2     1800-03-17T00:00:00  \n3     1800-04-16T00:00:00  \n4     1800-05-15T00:00:00  \n...                   ...  \n2923  2022-09-17T00:00:00  \n2924  2022-10-17T00:00:00  \n2925  2022-11-16T00:00:00  \n2926  2022-12-16T00:00:00  \n2927                 None  \n\n[2928 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>New Moon</th>\n      <th>First Quarter</th>\n      <th>Full Moon</th>\n      <th>Third Quarter</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>None</td>\n      <td>1800-01-02T00:00:00</td>\n      <td>1800-01-10T00:00:00</td>\n      <td>1800-01-18T00:00:00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1800-01-25T00:00:00</td>\n      <td>1800-02-01T00:00:00</td>\n      <td>1800-02-09T00:00:00</td>\n      <td>1800-02-16T00:00:00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1800-02-23T00:00:00</td>\n      <td>1800-03-03T00:00:00</td>\n      <td>1800-03-11T00:00:00</td>\n      <td>1800-03-17T00:00:00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1800-03-25T00:00:00</td>\n      <td>1800-04-02T00:00:00</td>\n      <td>1800-04-09T00:00:00</td>\n      <td>1800-04-16T00:00:00</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1800-04-23T00:00:00</td>\n      <td>1800-05-02T00:00:00</td>\n      <td>1800-05-08T00:00:00</td>\n      <td>1800-05-15T00:00:00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2923</th>\n      <td>2022-08-27T00:00:00</td>\n      <td>2022-09-03T00:00:00</td>\n      <td>2022-09-10T00:00:00</td>\n      <td>2022-09-17T00:00:00</td>\n    </tr>\n    <tr>\n      <th>2924</th>\n      <td>2022-09-25T00:00:00</td>\n      <td>2022-10-02T00:00:00</td>\n      <td>2022-10-09T00:00:00</td>\n      <td>2022-10-17T00:00:00</td>\n    </tr>\n    <tr>\n      <th>2925</th>\n      <td>2022-10-25T00:00:00</td>\n      <td>2022-11-01T00:00:00</td>\n      <td>2022-11-08T00:00:00</td>\n      <td>2022-11-16T00:00:00</td>\n    </tr>\n    <tr>\n      <th>2926</th>\n      <td>2022-11-23T00:00:00</td>\n      <td>2022-11-30T00:00:00</td>\n      <td>2022-12-08T00:00:00</td>\n      <td>2022-12-16T00:00:00</td>\n    </tr>\n    <tr>\n      <th>2927</th>\n      <td>2022-12-23T00:00:00</td>\n      <td>2022-12-29T00:00:00</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n<p>2928 rows × 4 columns</p>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "shark_data = pd.read_csv(\"data/attacks.csv\", encoding=\"latin1\")\n",
-    "#DataSet documentation: https://www.sharkattackfile.net/"
+    "#DataSet documentation: https://www.sharkattackfile.net/\n",
+    "moonp = pd.read_csv(\"data/MoonPhases.csv\", encoding=\"latin1\")\n",
+    "moonp"
    ],
    "metadata": {
     "collapsed": false,
